<resources>
    <string name="app_name">CeritaApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Ekspresikan dan Bagikan cerita kehidupan sehari-hari kamu kepada banyak orang dan temukan kebahagiaan dari cerita dengan yang lainnya</string>
    <string name="title_welcome_page">Selamat datang di CeritaApp!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Kata sandi</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="hello_blank_fragment">fragment kosong</string>
    <string name="name">Nama</string>
    <string name="password_error_message">Password tidak boleh kurang dari 8 karakter</string>
    <string name="title_story">Judul daftar cerita</string>
    <string name="description_story">kajsbdhkabcjabsndankdjbakshdbasjxnlajdnjasbd</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="add_description">Tambah deskripsi</string>
    <string name="settings">Pengaturan</string>
    <string name="story">Cerita</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="language_setting">Change language</string>
    <string name="retry">Coba lagi</string>
</resources>